fix: getMovieByName
